--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <!doctypehtml>
+<head>
+<stile>
+  img {width: 100px;
+</stile>
+
+</head>
+
 <body>
 <img src="RadioDiagram.jpg" alt="test">
 </body>
