--- a/index.html
+++ b/index.html
@@ -1,11 +1,4 @@
 <!doctypehtml>
-<head>
-<stile>
-  img: {width: "50"px;}
-</stile>
-
-</head>
-
 <body>
-<img src="RadioDiagram.jpg" alt="test">
+<img src="RadioDiagram.jpg" alt="test" width="500" >
 </body>
