--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctypehtml>
 <body>
-<img src="RadioDiagram.jpg" alt="test" width="500" >
+<img src="RadioDiagram.jpg" alt="test" width="500" height="600">
 </body>
